<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10pt"
        android:text="@string/instruction_1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10pt"
        android:text="@string/instruction_2" />

    <Button
        android:id="@+id/selectDeviceBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectDeviceBtnText" />

    <Button
        android:id="@+id/measurementBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/measurementBtnText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:srcCompat="@drawable/photo_view" />

</LinearLayout>