<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SelectDeviceActivity"
    android:padding="10dp">

    <Button
        android:id="@+id/checkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkButtonText" />

    <Button
        android:id="@+id/btSettingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btSettingButtonText" />

    <Button
        android:id="@+id/appSettingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appSettingButtonText" />

    <ProgressBar
        android:id="@+id/progressBar_cyclic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:text="@string/deviceListText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:id="@+id/bondedDevicesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="1"
                android:padding="3dp"></GridLayout>

            <GridLayout
                android:id="@+id/findDevicesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="1"
                android:padding="3dp"></GridLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>